# gshell

./: .gdbinit  .mtn-ignore  Makefile.am  Makefile.in  TODO.txt  configure  configure.ac  release-expand.config  tests.config
install/deb/: changelog  control  rules
install/osx/PackageMaker.pmdoc/: 01package-contents.xml  01package.xml  index.xml
install/osx/Resources/: Welcome.rtf
install/rpm/: gshell.spec
perl/: GENESIS3.pm  Makefile.am  Makefile.in
perl/GENESIS3/: Python.pm
schedules/: singlep.ssp
tests/: Makefile.am  Makefile.in  introduction.html  neurospaces_harness  neurospaces_harness.ptkdb  tests.config
tests/scripts/: add_command_warning  chemesis-cal1  chemesis3-cal1  chemesis3-cal2  db-network-1x4-loops1  db-network-1x4-loops2  db-rsnet-32x32-volumeconnect  db-rsnet-4x4-volumeconnect  db-rsnet-4x4-volumeconnect-refract  db-rsnet-4x4-volumeconnect-refract004  db-rsnet-4x4-volumeconnect-refract010  db-rsnet-4x4-volumeconnect-refract020  interactive  interactive.g3  model_state_purkinje  model_state_singlep  model_state_singlep.ptkdb  network-1x2.g3  network-1x4  network-1x4-loops  network-1x4-loops2  network-1x4.g3  network-4x4_refract004.g  network-4x4_refract010.g  network-4x4_refract020.g  network-simple  network-simple.g3  network.g3  output4  output4.ptkdb  rsnet-2x2-createprojection  rsnet-2x2-createprojection-noemittime  rsnet-2x2-createprojection-outputtimestep  rsnet-2x2-volumeconnect  rsnet-2x2-volumeconnect.g3  runtime_parameter_add  simple_example.g3  simple_purkinje  simple_purkinje.g3  simple_purkinje_endogenous  (+10 more)
tests/specifications/: chemesis3.t  commands.t  components.t  creating_elements.t  current_injection.t  current_working_element.t  endogenous.t  errors.t  help.t  interactive.t  model_state.t  multicompartment.t  ndf_library.t  ndf_save.t  network-1x2.t  network-1x4.t  network-rsnet-2x2.t  network-simple.t  network-two-cells.t  network.t  output.t  passive.t  pclamp.t  pulsegen.t  purk_test.t  python.t  refractory.t  simple_purkinje.t  simple_run.t  single_synapse.t  sli.t  squid.t  tabulator.t  two-cells.t  variables.t  version.t  xml.t
tests/specifications/strings/: RSnet_Vm_4x4_refract_004.txt  RSnet_Vm_4x4_refract_010.txt  RSnet_Vm_4x4_refract_020.txt  network-1x2.txt  network-1x4-loops.txt  network-1x4.txt  network-simple.txt  output_refract_004.txt  output_refract_010.txt  output_refract_020.txt  pulsegen-freerun.txt  rsnet-2x2-noemittime.txt  rsnet-2x2-outputtimestep.txt  rsnet-2x2.txt  squid.txt  two-BDK5cells.txt  two-VAcells.txt  two-baskcells.txt  two-cells1.txt  two-pyrcells.txt  two-simplecells.txt
tests/specifications/strings/purkinje/: edsjb1994-current.txt  edsjb1994-endogenous.txt  edsjb1994-endogenous2.txt  edsjb1994-perfectclamp.txt  purk_test.txt
tests/specifications/test-channels/: simplecell-M.t
