##
## gshell: the genesis 3 shell.
##

##############################################################################
##'
##' gshell
##'
##' Copyright (C) 2007-2008 Hugo Cornelis
##'
##' Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

perldir = $(prefix)/glue/swig/perl

nobase_dist_perl_DATA = @PERL_MODULES@

perldatadir = $(prefix)/neurospaces/gshell

nobase_dist_perldata_DATA = @PERL_DATA@

