##
## gshell: the genesis 3 shell.
##

##############################################################################
##'
##' gshell
##'
##' Copyright (C) 2007-2008 Hugo Cornelis
##'
##' Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

#t automake does not allow to pass in arguments for tests ?

check_SCRIPTS = $(srcdir)/neurospaces_harness 

noinst_SCRIPTS = \
	$(srcdir)/scripts/simple_purkinje \
	$(srcdir)/scripts/simple_purkinje.g3

TESTS = $(srcdir)/neurospaces_harness

test: check

